# non-messenger

./: .gitignore  CLAUDE.md  CONTENT_POLICY.md  CRYPTOGRAPHIC_WARFARE_MANUAL.md  CRYPTO_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  LEGAL_NOTICE.md  PROJECT_STATUS.md  README.md  requirements.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/nonmessenger/: MainActivity.kt
android/app/src/main/java/com/nonmessenger/crypto/: NonMessengerCrypto.kt
android/app/src/main/java/com/nonmessenger/database/: NonMessengerDatabase.kt
android/app/src/main/java/com/nonmessenger/model/: DataModels.kt
android/app/src/main/java/com/nonmessenger/models/: Contact.kt  Message.kt  ServerStatus.kt  UserProfile.kt
android/app/src/main/java/com/nonmessenger/network/: MessagePoolClient.kt
android/app/src/main/java/com/nonmessenger/ui/: QRCodeGenerator.kt  QRCodeScanner.kt
android/app/src/main/java/com/nonmessenger/ui/screens/: ChatScreen.kt  MainScreen.kt  QRCodeScreen.kt  SettingsTab.kt
android/app/src/main/java/com/nonmessenger/ui/theme/: Theme.kt  Type.kt
android/app/src/main/java/com/nonmessenger/viewmodel/: MainViewModel.kt
android/app/src/main/java/com/nonmessenger/voice/: VoiceCallManager.kt
desktop/: Cargo.toml
desktop/src/: commands.rs  crypto.rs  database.rs  main.rs  models.rs  network.rs  utils.rs  voice.rs
server/: jest.config.js  package-lock.json  package.json  server.js  test_client.js
server/shared/crypto/: encryption.js
server/shared/utils/: keyStorage.js
server/tests/: crypto.test.js  protocols.test.js  server.test.js  setup.js
shared/crypto/: encryption.js
shared/protocols/: awareness.js  messaging.js
