[package]
name = "nonmessenger-desktop"
version = "1.0.0"
description = "NonMessenger - Secure, distributed messaging platform"
authors = ["NonMessenger Team"]
license = "GPL-3.0"
repository = "https://github.com/nonmessenger/nonmessenger"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
keyring = "2.0"
rsa = "0.9"
aes-gcm = "0.10"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
pbkdf2 = "0.12"
bip39 = "2.0"
qrcode = "0.14"
image = "0.24"
base64 = "0.21"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Audio dependencies for voice calls
cpal = "0.15"
hound = "3.5"
opus = "0.3"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Encryption
ring = "0.17"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincrypt"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "3.0"
